# Pinball2DAvian

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ball.rs  bumpers.rs  flippers.rs  launcher.rs  main.rs  nudge.rs  pins.rs  walls.rs
