[package]
name = "pinball2davian"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
avian2d = "0.4.0"
bevy_prototype_lyon = { git = "https://github.com/pindash-io/bevy_prototype_lyon", branch = "bevy-0.17" }
bevy-inspector-egui = "0.34.0"
## Enable a small amount of optimization in the dev profile.
#[profile.dev]
#opt-level = 1

## Enable a large amount of optimization in the dev profile for dependencies.
#[profile.dev.package."*"]
#opt-level = 3

# [profile.release]
# opt-level = 'z'
# lto = "thin"

