[package]
name = "pinball2davian"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
avian2d = { version = "0.4.0", features = ["diagnostic_ui"] }
bevy_prototype_lyon = "0.15.0"
bevy-inspector-egui = "0.35.0"
## Enable a small amount of optimization in the dev profile.
#[profile.dev]
#opt-level = 1

## Enable a large amount of optimization in the dev profile for dependencies.
#[profile.dev.package."*"]
#opt-level = 3

# [profile.release]
# opt-level = 'z'
# lto = "thin"

